Added nav bar about page

--- a/My Projects/SPA/index.html
+++ b/My Projects/SPA/index.html
@@ -120,15 +120,7 @@
         margin-bottom: 6rem;
         margin-left: 10px;
     }
-    /*.row>* {*/
-    /*    flex-shrink: 0;*/
-    /*    width: 100%;*/
-    /*    max-width: 100%;*/
-    /*    padding-right: calc(var(--bs-gutter-x) * .5);*/
-    /*    padding-left: calc(var(--bs-gutter-x) * .5);*/
-    /*    margin-top: var(--bs-gutter-y);*/
-    /*    margin-top: 96px;*/
-    /*}*/
+
 
     h1{
         color: orange;
@@ -155,6 +147,13 @@
         --bs-text-opacity: 1;
         color: rgba(var(--bs-danger-rgb),var(--bs-text-opacity))!important;
         font-size: 14px;
+    }
+
+
+    .form-floating>.form-control, .form-floating>.form-select {
+        height: calc(3.5rem + 2px);
+        line-height: 1.25;
+        margin-top: 17px;
     }
 </style>
 
@@ -1024,17 +1023,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
     // item form
 //     $("#btnItemSave").click(function () {
 //         saveItem();
@@ -1249,8 +1237,6 @@
 //     });
 //
 // // Item validation end
-
-
 
 
 
