--- a/home/index.html
+++ b/home/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
-    <link rel="icon" href="assests/images/me%20(2).jpg">
+    <link rel="icon" href="../assests/images/me%20(2).jpg">
     <meta name="viewport" content="widt=device-widtg initial-scale=1">
     <meta name="theme -color" content="blue">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -117,11 +117,23 @@
         header>nav>ul{
             position: absolute;
             right: 30px;
-            bottom: 0;
-            font-size: 24px;
+            bottom: 10px;
+            font-size: 33px;
             font-family: 'Lobster', cursive;
             list-style: none;
             color: white;
+        }
+
+        header>nav>ul {
+            position: absolute;
+            right: 30px;
+            /*left: 78px;*/
+            bottom: 22px;
+            font-size: 32px;
+            margin: auto;
+            margin-left: -68px;
+            padding-left: 0;
+            width: max-content;
         }
 
         header>nav>ul>li{
@@ -391,7 +403,7 @@
                 margin-left: -136px;
             }
 
-            main > section > img {
+            main > section > img {;
                 bottom: -76px;
                 width: 48px;
                 top: 25px;
@@ -434,12 +446,13 @@
 <header>
     <nav>
        <ul>
-           <li><a href="sub/aboutme.html">About</a></li>
-           <li><a href="sub/education.html">Education</a></li>
-           <li><a href="sub/skills.html">Skills</a></li>
-           <li><a href="sub/assignmens.html">Projects</a></li>
-           <li><a href="sub/projects.html">Assignments</a></li>
-           <li><a href="sub/contactme.html">Contact</a></li>
+           <li><a href="../home/index.html">Home</a></li>
+           <li><a href="../sub/aboutme.html">About</a></li>
+           <li><a href="../sub/education.html">Education</a></li>
+           <li><a href="../sub/skills.html">Skills</a></li>
+           <li><a href="../sub/assignmens.html">Projects</a></li>
+           <li><a href="../sub/projects.html">Assignments</a></li>
+           <li><a href="../sub/contactme.html">Contact</a></li>
        </ul>
     </nav>
 </header>
@@ -462,9 +475,9 @@
 <!--               <img src="assests/images/hobb.png" alt="" width="300">-->
                <section>
 <!--                <img src="assests/images/facebook%20(1).png" alt="" width="50"><br>-->
-               <a href="https://www.linkedin.com/in/chamodi-samarasinghe-a58188217"><img src="assests/images/linkedin%20(1).png" alt="" width="50"></a>
-               <a href="https://whatsapp.com/dl/"><img src="assests/images/whatsapp.png" alt="" width="50"></a>
-               <a href="https://github.com/chamodisamarasinghe"><img src="assests/images/github%20(1).png" alt="" width="50"></a>
+               <a href="https://www.linkedin.com/in/chamodi-samarasinghe-a58188217"><img src="../assests/images/linkedin%20(1).png" alt="" width="50"></a>
+               <a href="https://whatsapp.com/dl/"><img src="../assests/images/whatsapp.png" alt="" width="50"></a>
+               <a href="https://github.com/chamodisamarasinghe"><img src="../assests/images/github%20(1).png" alt="" width="50"></a>
                </section>
              </section>
 
@@ -474,7 +487,7 @@
 <section>
     <div>
 <!--        <img src="assests/images/about.jpg" alt="" width="180" align="right">-->
-        <img src="assests/images/san.png" alt="" width="445">
+        <img src="../assests/images/san.png" alt="" width="445">
     </div>
 
 </section>
