--- a/sub/assignmens.html
+++ b/sub/assignmens.html
@@ -12,6 +12,39 @@
 </head>
 
 <style>
+    header{
+        position: relative;
+        height: 80px;
+        box-shadow: -2px 6px 45px -4px darkslateblue;
+    }
+
+    header>nav>ul{
+        position: absolute;
+        right: 30px;
+        bottom: 10px;
+        font-size: 33px;
+        font-family: 'Lobster', cursive;
+        list-style: none;
+        color: white;
+    }
+
+    header>nav>ul {
+        position: absolute;
+        right: 30px;
+        /*left: 78px;*/
+        bottom: 22px;
+        font-size: 32px;
+        margin: auto;
+        margin-left: -68px;
+        padding-left: 0;
+        width: max-content;
+    }
+
+    header>nav>ul>li{
+        padding: 0 10px 0 10px;
+        display: inline-block;
+    }
+
     body{
         background: black;
     }
@@ -229,7 +262,22 @@
 
 
 <body>
-<header><h1>My Projects</h1></header>
+<header>
+    <nav>
+        <ul>
+
+            <li><a href="../home/index.html">Home</a></li>
+            <li><a href="aboutme.html">About</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="assignmens.html">Projects</a></li>
+            <li><a href="projects.html">Assignments</a></li>
+            <li><a href="contactme.html">Contact</a></li>
+        </ul>
+    </nav>
+
+<!--    <h1>My Projects</h1>-->
+</header>
 
 <section>
     <div1>
