--- a/sub/projects.html
+++ b/sub/projects.html
@@ -11,6 +11,42 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
     <style>
+        header{
+            position: relative;
+            height: 80px;
+            box-shadow: -2px 6px 45px -4px darkslateblue;
+        }
+
+        header>nav>ul{
+            position: absolute;
+            right: 30px;
+            bottom: 10px;
+            font-size: 33px;
+            font-family: 'Lobster', cursive;
+            list-style: none;
+            color: white;
+        }
+
+        header>nav>ul {
+            position: absolute;
+            right: 30px;
+            /*left: 78px;*/
+            bottom: 22px;
+            font-size: 32px;
+            margin: auto;
+            margin-left: -68px;
+            padding-left: 0;
+            width: max-content;
+        }
+
+        header>nav>ul>li{
+            padding: 0 10px 0 10px;
+            display: inline-block;
+        }
+
+
+
+
         h1 {
             color: yellow;
             font-size: 40px;
@@ -134,7 +170,19 @@
 <body>
 
 <header>
-    <h1>Skills</h1>
+    <nav>
+        <ul>
+
+            <li><a href="../home/index.html">Home</a></li>
+            <li><a href="aboutme.html">About</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="assignmens.html">Projects</a></li>
+            <li><a href="projects.html">Assignments</a></li>
+            <li><a href="contactme.html">Contact</a></li>
+        </ul>
+    </nav>
+<!--    <h1>Skills</h1>-->
 </header>
 
 
