--- a/sub/education.html
+++ b/sub/education.html
@@ -8,19 +8,57 @@
     <meta name="theme -color" content="blue">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+        header{
+            position: relative;
+            height: 80px;
+            box-shadow: -2px 6px 45px -4px darkslateblue;
+        }
+
+
+        header>nav>ul{
+            position: absolute;
+            right: 30px;
+            bottom: 10px;
+            font-size: 33px;
+            font-family: 'Lobster', cursive;
+            list-style: none;
+            color: white;
+        }
+
+        header>nav>ul {
+            position: absolute;
+            right: 30px;
+            /*left: 78px;*/
+            bottom: 22px;
+            font-size: 32px;
+            margin: auto;
+            margin-left: -68px;
+            padding-left: 0;
+            width: max-content;
+        }
+
+        header>nav>ul>li{
+            padding: 0 10px 0 10px;
+            display: inline-block;
+        }
+
+
+
+
+
         body{
             background-color: black;
         }
 
-        header>h1{
-            font-size: 50px;
-            color: yellow;
-            margin-left: 300px;
-            animation: moveright 1s linear;
-            animation-delay: 1s;
-            visibility: hidden;
-            animation-fill-mode: forwards;
-        }
+        /*header>h1{*/
+        /*    font-size: 50px;*/
+        /*    color: yellow;*/
+        /*    margin-left: 200px;*/
+        /*    animation: moveright 1s linear;*/
+        /*    animation-delay: 1s;*/
+        /*    visibility: hidden;*/
+        /*    animation-fill-mode: forwards;*/
+        /*}*/
 
         @keyframes moveright {
             0% {
@@ -235,6 +273,22 @@
 <body>
 
 <header>
+    <nav>
+        <ul>
+
+            <li><a href="../home/index.html">Home</a></li>
+            <li><a href="aboutme.html">About</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="assignmens.html">Projects</a></li>
+            <li><a href="projects.html">Assignments</a></li>
+            <li><a href="contactme.html">Contact</a></li>
+        </ul>
+    </nav>
+
+
+
+
     <h1>Education</h1>
 </header>
 
