--- a/sub/skills.html
+++ b/sub/skills.html
@@ -10,6 +10,41 @@
 
 
     <style>
+        header{
+            position: relative;
+            height: 80px;
+            box-shadow: -2px 6px 45px -4px darkslateblue;
+        }
+
+        header>nav>ul{
+            position: absolute;
+            right: 30px;
+            bottom: 10px;
+            font-size: 33px;
+            font-family: 'Lobster', cursive;
+            list-style: none;
+            color: white;
+        }
+
+        header>nav>ul {
+            position: absolute;
+            right: 30px;
+            /*left: 78px;*/
+            bottom: 22px;
+            font-size: 32px;
+            margin: auto;
+            margin-left: -68px;
+            padding-left: 0;
+            width: max-content;
+        }
+
+        header>nav>ul>li{
+            padding: 0 10px 0 10px;
+            display: inline-block;
+        }
+
+
+
         body{
             background-color: black;
         }
@@ -17,7 +52,7 @@
        section> h2{
             color: white;
             position: absolute;
-            margin-left: 400px;
+            margin-left: 100px;
             top: 0px;
             font-size: 40px;
         }
@@ -143,6 +178,22 @@
 <body>
 
 <header>
+    <nav>
+        <ul>
+
+            <li><a href="../home/index.html">Home</a></li>
+            <li><a href="aboutme.html">About</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="assignmens.html">Projects</a></li>
+            <li><a href="projects.html">Assignments</a></li>
+            <li><a href="contactme.html">Contact</a></li>
+        </ul>
+    </nav>
+
+
+
+
     <h1>Skills and Tools</h1>
 </header>
 
