--- a/sub/aboutme.html
+++ b/sub/aboutme.html
@@ -11,97 +11,204 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="assests/css/fonts/css/all.css" rel="stylesheet">
     <style>
-        header > nav > ul {
-            position: absolute;
-            right: 0px;
-            left: 78px;
-            bottom: 29px;
-            font-size: 20px;
-            margin: auto;
-            margin-left: 125px;
-            padding-left: 0;
-            width: max-content;
+        {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
         }
 
-
-        header>nav>ul>li{
-            padding: 0 10px 0 10px;
-            display: inline-block;
+        body{
+            background-color: #3d4152;
         }
 
+        .navigation{
+            position: fixed;
+            inset: 20px 0 20px 20px;
+            width: 75px;
+            background: white;
+            transition: 0.5s;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-        header>nav>ul {
+        .navigation.open{
+            width: 250px;
+        }
+
+        .navigation .menuToggle{
             position: absolute;
-            right: 30px;
-            bottom: 18px;
-            font-size: 33px;
-            font-family: 'Lobster', cursive;
+            top: 0;
+            left: 0;
+            width: 100px;
+            height: 60px;
+            /*border-bottom: 1px solid rgba(0,0,0,0.5);*/
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            padding: 0 23px;
+        }
+
+        .navigation .menuToggle::before
+        {
+            content: '';
+            position: absolute;
+            width: 30px;
+            height: 2px;
+            background: #333;
+            transform: translateY(-8px);
+            transition: 0.5s;
+        }
+
+        .navigation.open .menuToggle::before{
+            transform: translateY(0px) rotate(45deg);
+        }
+
+        .navigation .menuToggle::after
+        {
+            content: '';
+            position: absolute;
+            width: 30px;
+            height: 2px;
+            background: #333;
+            transform: translateY(8px);
+            transition: 0.5s;
+            box-shadow: 0 -8px 0 #333;
+        }
+
+        .navigation.open .menuToggle::after{
+            transform: translateY(0px) rotate(-45deg);
+            box-shadow: 0 0 0 #333;
+        }
+
+        .navigation ul{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            width: 100%;
+        }
+
+        .navigation ul li{
             list-style: none;
-            color: white;
+            position: relative;
+            width: 100%;
+            height: 60px;
+            padding: 0 10px;
+            transition: 0.5s;
         }
 
-        header{
-            position: relative;
-            height: 80px;
-            box-shadow: -2px 6px 45px -4px darkslateblue;
+        .navigation ul li.active{
+            transform: translateX(30px);
         }
+
+        .navigation.open ul li.active{
+            transform: translateX(10px);
+        }
+
+        .navigation ul li a{
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            text-align: center;
+            text-decoration: none;
+        }
+
+        .navigation ul li a .icon{
+            position: relative;
+            display: block;
+            min-width: 55px;
+            height: 55px;
+            line-height: 60px;
+            transition: 0.5s;
+            border-radius: 10px;
+            font-size: 1.75em;
+            color: #222;
+        }
+
+        .navigation ul li.active a .icon{
+            color: white;
+            background: var(--clr);
+        }
+
+        .navigation ul li a .icon::before{
+            content: '';
+            position: absolute;
+            top: 10px;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: var(--clr);
+            filter: blur(8px);
+            opacity: 0;
+            transition: 0.5s;
+
+        }
+
+        .navigation ul li.active a .icon::before{
+            opacity: 0.5;
+        }
+
+        .navigation ul li a .text{
+            position: relative;
+            padding: 0 15px;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            color: #333;
+            opacity: 0;
+            visibility: hidden;
+            transition: 0.5s;
+        }
+
+        .navigation.open ul li a .text{
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .navigation ul li.active a .text{
+            color: var(--clr);
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        /*header{*/
+        /*    position: relative;*/
+        /*    height: 80px;*/
+        /*    box-shadow: -2px 6px 45px -4px darkslateblue;*/
+        /*}*/
 
         header{
             color: #4e52e9;
             font-size: 30px;
             font-family: "Righteous", cursive;
-            margin-left: 150px;
-            left: 160px;
-            animation: moveright 1s linear;
-            animation-delay: 0.1s;
-            visibility: hidden;
-            animation-fill-mode: forwards;
+            margin-left: 650px;
+
         }
 
-        @keyframes moveright {
-            0% {
-                transform: translateX(-100px);
-                visibility: visible;
-            }
-            100% {
-                transform: translateX(0);
-                visibility: visible;
-            }
-        }
-
-        /*    animation-name: changeColors;*/
-        /*    animation-duration:3s;*/
-        /*    animation-delay: 3s;*/
-        /*    animation-iteration-count: infinite;*/
-
-        /*}*/
-
-        /*@keyframes changeColors {*/
-        /*    0%,20% {*/
-        /*        color: yellow;*/
-        /*    }*/
-        /*    25% {*/
-        /*        color: green;*/
-        /*    }*/
-        /*    50% {*/
-        /*        color: deeppink;*/
-        /*    }*/
-        /*    75% {*/
-        /*        color: brown;*/
-        /*    }*/
-        /*    100% {*/
-        /*        color: purple;*/
-        /*    }*/
-        /*}*/
 
         body{
             /*background-color: #1d1e57;*/
             background-color: black;
         }
 
-        section>ul{
-            color: white;
-        }
 
         section>img{
             position: absolute;
@@ -110,114 +217,19 @@
             margin-top: 85px;
         }
 
-        body>div{
 
-        }
-
-        @media all and (max-width: 320px){
-            section>ul {
-                color: white;
-                font-size: 28px;
-                bottom: 18px;
-                margin: auto;
-                margin-left: -34px;
-            }
-            section>img {
-                position: absolute;
-                right: -779px;
-                top: 90px;
-                width: 352px;
-            }
-            section>object {
-                position: absolute;
-                margin-left: 254px;
-            }
-        }
-
-        @media all and (min-width: 320px) and (max-width: 375px){
-            section>ul {
-                color: white;
-                font-size: 15px;
-                bottom: 18px;
-                margin: auto;
-                margin-left: -2px
-            }
-            section>img {
-                position: absolute;
-                right: -683px;
-                top: 27px;
-                width: 376px;
-            }
-            section>object {
-                position: absolute;
-                margin-left: 225px;
-            }
-
-        }
-
-        @media all and (min-width: 375px) and (max-width: 425px){
-            section>ul {
-                color: white;
-                font-size: 15px;
-                bottom: 18px;
-                margin: auto;
-                margin-left: -98px;
-            }
-            section>img {
-                position: absolute;
-                right: -94px;
-                top: 145px;
-                width: 171px;
-            }
-        }
-        @media all and (min-width: 425px) and (max-width: 768px){
-            section>img {
-                position: absolute;
-                right: -601px;
-                top: 36px;
-                width: 375px;
-            }
-            section>ul {
-                color: white;
-                font-size: 15px;
-                bottom: 18px;
-                margin: auto;
-                margin-left: 60px;
-            }
-            section>object {
-                position: absolute;
-                margin-left: 194px;
-            }
-        }
-
-        @media all and (min-width: 768px) and (max-width: 1024px){
-            section>img {
-                position: absolute;
-                right: -231px;
-                top: -33px;
-                width: 281px;
-            }
-            section>ul {
-                color: white;
-                font-size: 28px;
-            }
-            section>object {
-                position: absolute;
-                margin-left: 167px;
-            }
-        }
-
-        section>ul>li>h3{
-            margin-left: 60px;
-            font-size: 30px;
+        section>ul>li>h3 {
+            margin-left: 310px;
+            font-size: 25px;
             font-family: "Righteous", cursive;
-
-
+            list-style: none;
+            color: white;
         }
 
        section>object{
            position: absolute;
            margin-left: 300px;
+           margin-top: 10px;
        }
 
         section>img{
@@ -237,38 +249,9 @@
             }
         }
 
-        section>ul{
-            animation: moveright 1s linear;
-            animation-delay: 1s;
-            visibility: hidden;
-            animation-fill-mode: forwards;
-        }
 
-        @keyframes moveright {
-            0% {
-                transform: translateX(-100px);
-                visibility: visible;
-            }
-            100% {
-                transform: translateX(0);
-                visibility: visible;
-            }
-        }
 
-        /*    animation: zoomin 1s linear 1;*/
-        /*    animation-delay: 0.1s;*/
-        /*    visibility: hidden;*/
-        /*    animation-fill-mode: forwards;*/
-        /*}*/
-        /*@keyframes zoomin {*/
-        /*    0%{*/
-        /*        transform: scale(0.5);*/
-        /*        visibility: visible;*/
-        /*    }*/
-        /*    100%{*/
-        /*        transform: scale(1);*/
-        /*        visibility: visible;*/
-        /*    }*/
+
 
         div>h1{
             color: white;
@@ -276,28 +259,101 @@
             font-size: 50px;
         }
 
+
     </style>
 </head>
 
 <body>
-    <div></div>
-<header>
-    <nav>
-        <ul>
+<div class="navigation">
+    <div class="menuToggle"></div>
+    <ul>
+        <li class="list " style="--clr:#f44336;">
+            <a href="../home/index.html">
+                    <span class="icon">
+                        <ion-icon name="home-outline"></ion-icon>
+                    </span>
+                <span class="text">Home</span>
+            </a>
+        </li>
+        <li class="list active" style="--clr:orange">
+            <a href="aboutme.html">
+                    <span class="icon">
+                        <ion-icon name="person-outline"></ion-icon>
+                    </span>
+                <span class="text">About</span>
+            </a>
+        </li>
+        <li class="list" style="--clr:purple;">
+            <a href="education.html">
+                    <span class="icon">
+                       <ion-icon name="book-outline"></ion-icon>
+                    </span>
+                <span class="text">Education</span>
+            </a>
+        <li class="list" style="--clr:green;">
+            <a href="skills.html">
+                    <span class="icon">
+                       <ion-icon name="desktop-outline"></ion-icon>
+                    </span>
+                <span class="text">Skills</span>
+            </a>
+        </li>
+        <li class="list" style="--clr:blue">
+            <a href="projects.html">
+                    <span class="icon">
+                        <ion-icon name="newspaper-outline"></ion-icon>
+                    </span>
+                <span class="text">Projects</span>
+            </a>
+        </li>
+        <li class="list" style="--clr:pink">
+            <a href="assignmens.html">
+                    <span class="icon">
+                        <ion-icon name="document-outline"></ion-icon>
+                    </span>
+                <span class="text">Assignments</span>
+            </a>
+        </li>
+        <li class="list" style="--clr: #800000">
+            <a href="contactme.html">
+                    <span class="icon">
+                        <ion-icon name="call-outline"></ion-icon>
+                    </span>
+                <span class="text">Contact</span>
+            </a>
+        </li>
+    </ul>
+</div>
 
-            <li><a href="../home/index.html">Home</a></li>
-            <li><a href="aboutme.html">About</a></li>
-            <li><a href="education.html">Education</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="assignmens.html">Projects</a></li>
-            <li><a href="projects.html">Assignments</a></li>
-            <li><a href="contactme.html">Contact</a></li>
-        </ul>
-    </nav>
+
+
+
+
+
+
+
+
+
+
+<div></div>
+<header>
+    <h1>About Me</h1>
+<!--    <nav>-->
+<!--        <ul>-->
+
+<!--            <li><a href="../home/index.html">Home</a></li>-->
+<!--            <li><a href="aboutme.html">About</a></li>-->
+<!--            <li><a href="education.html">Education</a></li>-->
+<!--            <li><a href="skills.html">Skills</a></li>-->
+<!--            <li><a href="assignmens.html">Projects</a></li>-->
+<!--            <li><a href="projects.html">Assignments</a></li>-->
+<!--            <li><a href="contactme.html">Contact</a></li>-->
+<!--        </ul>-->
+<!--    </nav>-->
 </header>
 
 <div>
-    <h1>About Me</h1>
+<!--    <h1>About Me</h1>-->
 </div>
 
 
@@ -315,7 +371,7 @@
     </section>
 
     <section>
-        <img src="../assests/images/self.png" alt="" width="310" align="right">
+        <img src="../assests/images/self.png" alt="" width="315" align="right">
     </section>
 
       <section>
@@ -324,6 +380,31 @@
       </section>
 
 
+
+
+
+
+
+<script>
+    const menuToggle = document.querySelector('.menuToggle');
+    const navigation = document.querySelector('.navigation');
+    menuToggle.onclick = function () {
+        navigation.classList.toggle('open')
+    }
+
+    const list = document.querySelectorAll('.list');
+    function activeLink(){
+        list.forEach((item) =>
+            item.classList.remove('active'));
+        this.classList.add('active');
+    }
+
+    list.forEach((item) =>
+        item.addEventListener('click',activeLink))
+</script>
+
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
