Updated skills page

--- a/sub/assignmens.html
+++ b/sub/assignmens.html
@@ -180,27 +180,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     body{
         background: black;
     }
@@ -483,32 +462,9 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
 <header>
-<!--    <nav>-->
-<!--        <ul>-->
 
-<!--            <li><a href="../home/index.html">Home</a></li>-->
-<!--            <li><a href="aboutme.html">About</a></li>-->
-<!--            <li><a href="education.html">Education</a></li>-->
-<!--            <li><a href="skills.html">Skills</a></li>-->
-<!--            <li><a href="assignmens.html">Projects</a></li>-->
-<!--            <li><a href="projects.html">Assignments</a></li>-->
-<!--            <li><a href="contactme.html">Contact</a></li>-->
-<!--        </ul>-->
-<!--    </nav>-->
-
-<!--    <h1>My Projects</h1>-->
+    <h1>My Projects</h1>
 </header>
 
 <section>
