Updated education page

--- a/sub/skills.html
+++ b/sub/skills.html
@@ -419,23 +419,8 @@
 
 
 <header>
-<!--    <nav>-->
-<!--        <ul>-->
 
-<!--            <li><a href="../home/index.html">Home</a></li>-->
-<!--            <li><a href="aboutme.html">About</a></li>-->
-<!--            <li><a href="education.html">Education</a></li>-->
-<!--            <li><a href="skills.html">Skills</a></li>-->
-<!--            <li><a href="assignmens.html">Projects</a></li>-->
-<!--            <li><a href="projects.html">Assignments</a></li>-->
-<!--            <li><a href="contactme.html">Contact</a></li>-->
-<!--        </ul>-->
-<!--    </nav>-->
-
-
-
-
-<!--    <h1>Skills and Tools</h1>-->
+    <h1>Skills and Tools</h1>
 </header>
 
     <section>
