--- a/sub/education.html
+++ b/sub/education.html
@@ -8,39 +8,191 @@
     <meta name="theme -color" content="blue">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        header{
-            position: relative;
-            height: 80px;
-            box-shadow: -2px 6px 45px -4px darkslateblue;
+        {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
         }
 
+        body{
+            background-color: #3d4152;
+        }
 
-        header>nav>ul{
+        .navigation{
+            position: fixed;
+            inset: 20px 0 20px 20px;
+            width: 75px;
+            background: white;
+            transition: 0.5s;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .navigation.open{
+            width: 250px;
+        }
+
+        .navigation .menuToggle{
             position: absolute;
-            right: 30px;
-            bottom: 10px;
-            font-size: 33px;
-            font-family: 'Lobster', cursive;
+            top: 0;
+            left: 0;
+            width: 100px;
+            height: 60px;
+            /*border-bottom: 1px solid rgba(0,0,0,0.5);*/
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            padding: 0 23px;
+        }
+
+        .navigation .menuToggle::before
+        {
+            content: '';
+            position: absolute;
+            width: 30px;
+            height: 2px;
+            background: #333;
+            transform: translateY(-8px);
+            transition: 0.5s;
+        }
+
+        .navigation.open .menuToggle::before{
+            transform: translateY(0px) rotate(45deg);
+        }
+
+        .navigation .menuToggle::after
+        {
+            content: '';
+            position: absolute;
+            width: 30px;
+            height: 2px;
+            background: #333;
+            transform: translateY(8px);
+            transition: 0.5s;
+            box-shadow: 0 -8px 0 #333;
+        }
+
+        .navigation.open .menuToggle::after{
+            transform: translateY(0px) rotate(-45deg);
+            box-shadow: 0 0 0 #333;
+        }
+
+        .navigation ul{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            width: 100%;
+        }
+
+        .navigation ul li{
             list-style: none;
+            position: relative;
+            width: 100%;
+            height: 60px;
+            padding: 0 10px;
+            transition: 0.5s;
+        }
+
+        .navigation ul li.active{
+            transform: translateX(30px);
+        }
+
+        .navigation.open ul li.active{
+            transform: translateX(10px);
+        }
+
+        .navigation ul li a{
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            text-align: center;
+            text-decoration: none;
+        }
+
+        .navigation ul li a .icon{
+            position: relative;
+            display: block;
+            min-width: 55px;
+            height: 55px;
+            line-height: 60px;
+            transition: 0.5s;
+            border-radius: 10px;
+            font-size: 1.75em;
+            color: #222;
+        }
+
+        .navigation ul li.active a .icon{
             color: white;
+            background: var(--clr);
         }
 
-        header>nav>ul {
+        .navigation ul li a .icon::before{
+            content: '';
             position: absolute;
-            right: 30px;
-            /*left: 78px;*/
-            bottom: 22px;
-            font-size: 32px;
-            margin: auto;
-            margin-left: -68px;
-            padding-left: 0;
-            width: max-content;
+            top: 10px;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: var(--clr);
+            filter: blur(8px);
+            opacity: 0;
+            transition: 0.5s;
+
         }
 
-        header>nav>ul>li{
-            padding: 0 10px 0 10px;
-            display: inline-block;
+        .navigation ul li.active a .icon::before{
+            opacity: 0.5;
         }
+
+        .navigation ul li a .text{
+            position: relative;
+            padding: 0 15px;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            color: #333;
+            opacity: 0;
+            visibility: hidden;
+            transition: 0.5s;
+        }
+
+        .navigation.open ul li a .text{
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .navigation ul li.active a .text{
+            color: var(--clr);
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -70,24 +222,7 @@
                 visibility: visible;
             }
         }
-            /*margin-left: 150px;*/
-        /*    animation-name: test;*/
-        /*    animation-duration: 5s;*/
-        /*    position: relative;*/
-        /*    animation-iteration-count: 1;*/
-        /*    animation-direction: normal;*/
-        /*    animation-fill-mode: forwards;*/
-        /*}*/
 
-        /*@keyframes test {*/
-        /*    from {*/
-        /*        left: 0;*/
-        /*    }*/
-        /*    to {*/
-        /*        left: 300px;*/
-        /*    }*/
-
-        /*}*/
 
         section>div>img{
             position: absolute;
@@ -130,40 +265,54 @@
             margin-top: -2px;
         }
 
-        /*section>div>h3:nth-child(1){*/
+
+
+        section>main>div>:nth-child(1) {
+            position: absolute;
+            margin-left: 41px;
+            margin-top: 20px;
+        }
+        /*section>main>div>:nth-child(2){*/
         /*    position: absolute;*/
-        /*    margin-left: -100px;*/
-        /*    color: white;*/
-        /*    margin-top: 400px;*/
+        /*    margin-left: 5px;*/
+        /*    margin-top: 600px;*/
+
         /*}*/
 
-        /*section>div>h3:nth-child(2){*/
-        /*    !*position: absolute;*!*/
-        /*    margin-left: -1000px;*/
-        /*    color: white;*/
-        /*    margin-top: 400px;*/
-        /*}*/
-
-        section>main>div>:nth-child(1){
+        main>div:nth-child(1) {
             position: absolute;
-            margin-left: -10px;
-            margin-top: -40px;
-
+            width: 100px;
+            margin-left: 287px;
+            margin-top: 80px;
         }
 
-        section>main>div>:nth-child(2){
+        main>div:nth-child(2) {
             position: absolute;
-            margin-left: 5px;
-            margin-top: 600px;
-
+            width: 50px;
+            margin-left: 419px;
+            margin-top: 60px;
         }
 
-        section>main>div>:nth-child(3){
-            position: absolute;
-            margin-left: 5px;
-            margin-top: 1000px;
-            top: 700px;
 
+        main>div:nth-child(3) {
+            position: absolute;
+            width: 50px;
+            margin-left: 542px;
+            margin-top: 40px;
+        }
+
+        main>div:nth-child(4) {
+            position: absolute;
+            width: 50px;
+            margin-left: 678px;
+            margin-top: 20px;
+        }
+
+        main>div:nth-child(5) {
+            position: absolute;
+            width: 50px;
+            margin-left: 795px;
+            margin-top: -2px;
         }
 
         section>ul>li{
@@ -178,6 +327,7 @@
             animation-delay: 0.1s;
             visibility: hidden;
             animation-fill-mode: forwards;
+
         }
 
         @keyframes zoomin {
@@ -191,38 +341,41 @@
             }
         }
 
-        section1>div:nth-child(1){
+        section1>div:nth-child(1) {
             position: absolute;
-            margin-left: 150px;
+            margin-left: 351px;
             margin-top: -110px;
         }
         section1>div:nth-child(2){
             position: absolute;
-            margin-left: 300px;
+            margin-left: 500px;
             margin-top: -105px;
         }
-        section1>div:nth-child(3){
+        section1>div:nth-child(3) {
             position: absolute;
-            margin-left: 450px;
+            margin-left: 606px;
             margin-top: -95px;
         }
-        section1>div:nth-child(4){
+        section1>div:nth-child(4) {
             position: absolute;
-            margin-left: 570px;
+            margin-left: 752px;
             margin-top: -90px;
         }
-        section1>div:nth-child(5){
+        section1>div:nth-child(5) {
             position: absolute;
-            margin-left: 700px;
+            margin-left: 850px;
             margin-top: -80px;
         }
 
-       section>div>img{
-           animation: zoomin 1s linear 1;
-           animation-delay: 0.1s;
-           visibility: hidden;
-           animation-fill-mode: forwards;
-       }
+
+
+        section>div>img {
+            animation: zoomin 1s linear 1;
+            animation-delay: 0.1s;
+            visibility: hidden;
+            animation-fill-mode: forwards;
+            margin-left: 126px;
+        }
 
         @keyframes zoomin {
             0%{
@@ -236,32 +389,9 @@
         }
 
 
-        @media all and (max-width: 425px){
-            section>ul>li {
-                color: white;
-                /* position: absolute; */
-                margin-left: 813px;
-                margin-top: 20px;
-            }
-        }
 
-        @media all and (min-width: 425px) and (max-width: 768px){
-            section>ul>li {
-                color: white;
-                /* position: absolute; */
-                margin-left: 919px;
-                margin-top: 20px;
-            }
-        }
 
-        @media all and (min-width: 768px) and (max-width: 1024px){
-            section>ul>li {
-                color: white;
-                /* position: absolute; */
-                margin-left: 919px;
-                margin-top: 20px;
-            }
-        }
+
 
 
     </style>
@@ -271,20 +401,83 @@
 
 
 <body>
+<div class="navigation">
+    <div class="menuToggle"></div>
+    <ul>
+        <li class="list " style="--clr:#f44336;">
+            <a href="../home/index.html">
+                    <span class="icon">
+                        <ion-icon name="home-outline"></ion-icon>
+                    </span>
+                <span class="text">Home</span>
+            </a>
+        </li>
+        <li class="list" style="--clr:orange">
+            <a href="aboutme.html">
+                    <span class="icon">
+                        <ion-icon name="person-outline"></ion-icon>
+                    </span>
+                <span class="text">About</span>
+            </a>
+        </li>
+        <li class="list" style="--clr:purple;">
+            <a href="education.html">
+                    <span class="icon">
+                       <ion-icon name="book-outline"></ion-icon>
+                    </span>
+                <span class="text">Education</span>
+            </a>
+        <li class="list  active" style="--clr:green;">
+            <a href="skills.html">
+                    <span class="icon">
+                       <ion-icon name="desktop-outline"></ion-icon>
+                    </span>
+                <span class="text">Skills</span>
+            </a>
+        </li>
+        <li class="list" style="--clr:blue">
+            <a href="projects.html">
+                    <span class="icon">
+                        <ion-icon name="newspaper-outline"></ion-icon>
+                    </span>
+                <span class="text">Projects</span>
+            </a>
+        </li>
+        <li class="list" style="--clr:pink">
+            <a href="assignmens.html">
+                    <span class="icon">
+                        <ion-icon name="document-outline"></ion-icon>
+                    </span>
+                <span class="text">Assignments</span>
+            </a>
+        </li>
+        <li class="list" style="--clr: #800000">
+            <a href="contactme.html">
+                    <span class="icon">
+                        <ion-icon name="call-outline"></ion-icon>
+                    </span>
+                <span class="text">Contact</span>
+            </a>
+        </li>
+    </ul>
+</div>
+
+
+
 
 <header>
-    <nav>
-        <ul>
+<!--    <nav>-->
+<!--        <ul>-->
 
-            <li><a href="../home/index.html">Home</a></li>
-            <li><a href="aboutme.html">About</a></li>
-            <li><a href="education.html">Education</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="assignmens.html">Projects</a></li>
-            <li><a href="projects.html">Assignments</a></li>
-            <li><a href="contactme.html">Contact</a></li>
-        </ul>
-    </nav>
+<!--            <li><a href="../home/index.html">Home</a></li>-->
+<!--            <li><a href="aboutme.html">About</a></li>-->
+<!--            <li><a href="education.html">Education</a></li>-->
+<!--            <li><a href="skills.html">Skills</a></li>-->
+<!--            <li><a href="assignmens.html">Projects</a></li>-->
+<!--            <li><a href="projects.html">Assignments</a></li>-->
+<!--            <li><a href="contactme.html">Contact</a></li>-->
+<!--        </ul>-->
+<!--    </nav>-->
 
 
 
@@ -339,5 +532,26 @@
 </section1>
 
 
+
+<script>
+    const menuToggle = document.querySelector('.menuToggle');
+    const navigation = document.querySelector('.navigation');
+    menuToggle.onclick = function () {
+        navigation.classList.toggle('open')
+    }
+
+    const list = document.querySelectorAll('.list');
+    function activeLink(){
+        list.forEach((item) =>
+            item.classList.remove('active'));
+        this.classList.add('active');
+    }
+
+    list.forEach((item) =>
+        item.addEventListener('click',activeLink))
+</script>
+
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
