Updated index page

--- a/sub/education.html
+++ b/sub/education.html
@@ -22,8 +22,8 @@
         .navigation{
             position: fixed;
             inset: 20px 0 20px 20px;
-            width: 75px;
-            background: white;
+            width: 105px;
+            background: #4f5050;
             transition: 0.5s;
             display: flex;
             justify-content: center;
@@ -420,14 +420,14 @@
                 <span class="text">About</span>
             </a>
         </li>
-        <li class="list" style="--clr:purple;">
+        <li class="list active" style="--clr:purple;">
             <a href="education.html">
                     <span class="icon">
                        <ion-icon name="book-outline"></ion-icon>
                     </span>
                 <span class="text">Education</span>
             </a>
-        <li class="list  active" style="--clr:green;">
+        <li class="list" style="--clr:green;">
             <a href="skills.html">
                     <span class="icon">
                        <ion-icon name="desktop-outline"></ion-icon>
