--- a/sub/assignmens.html
+++ b/sub/assignmens.html
@@ -26,8 +26,8 @@
     .navigation{
         position: fixed;
         inset: 20px 0 20px 20px;
-        width: 75px;
-        background: white;
+        width: 105px;
+        background: #4f5050;
         transition: 0.5s;
         display: flex;
         justify-content: center;
