--- a/home/index.html
+++ b/home/index.html
@@ -354,9 +354,10 @@
         }
 
 
-        @media all and(max-width: 320px) {
+        @media all and(max-width: 320px){
+
             h1 {
-                font-size: 31px;
+                font-size: 41px;
                 color: yellow;
                 animation: moveright 1s linear;
                 animation-delay: 0.1s;
@@ -365,8 +366,9 @@
                 margin-left: 50px;
             }
 
+
             h2 {
-                font-size: 26px;
+                font-size: 32px;
                 color: white;
                 animation: moveright 1s linear;
                 animation-delay: 1s;
@@ -376,11 +378,11 @@
             }
 
             h3 {
-                font-size: 62px;
+                font-size: 57px;
                 color: red;
-                bottom: 282px;
-                margin-left: -103px;
-                margin-top: -26px;
+                bottom: 286px;
+                margin-left: 55px;
+                margin-top: -6px;
                 animation: moveright 1s linear;
                 animation-delay: 2s;
                 visibility: hidden;
@@ -390,17 +392,109 @@
             section>div>img {
                 border-radius: 200px;
                 position: absolute;
-                right: -449px;
-                top: 552px;
+                right: -511px;
+                top: 551px;
                 animation: zoomin 3s linear 1;
                 animation-delay: 0.1s;
                 visibility: hidden;
                 animation-fill-mode: forwards;
             }
 
+
+        }
+
+    @media all and(min-width: 320px) and (max-width: 425px){
+        h1 {
+            font-size: 41px;
+            color: yellow;
+            animation: moveright 1s linear;
+            animation-delay: 0.1s;
+            visibility: hidden;
+            animation-fill-mode: forwards;
+            margin-left: 50px;
         }
 
 
+        h2 {
+            font-size: 32px;
+            color: white;
+            animation: moveright 1s linear;
+            animation-delay: 1s;
+            visibility: hidden;
+            animation-fill-mode: forwards;
+            margin-left: 50px;
+        }
+
+        h3 {
+            font-size: 57px;
+            color: red;
+            bottom: 286px;
+            margin-left: 55px;
+            margin-top: -6px;
+            animation: moveright 1s linear;
+            animation-delay: 2s;
+            visibility: hidden;
+            animation-fill-mode: forwards;
+        }
+
+        section>div>img {
+            border-radius: 200px;
+            position: absolute;
+            right: -511px;
+            top: 551px;
+            animation: zoomin 3s linear 1;
+            animation-delay: 0.1s;
+            visibility: hidden;
+            animation-fill-mode: forwards;
+        }
+
+    }
+
+        @media all and(min-width: 425px) and (max-width: 768px) {
+            h1 {
+                font-size: 41px;
+                color: yellow;
+                animation: moveright 1s linear;
+                animation-delay: 0.1s;
+                visibility: hidden;
+                animation-fill-mode: forwards;
+                margin-left: 50px;
+            }
+
+
+            h2 {
+                font-size: 32px;
+                color: white;
+                animation: moveright 1s linear;
+                animation-delay: 1s;
+                visibility: hidden;
+                animation-fill-mode: forwards;
+                margin-left: 50px;
+            }
+
+            h3 {
+                font-size: 57px;
+                color: red;
+                bottom: 286px;
+                margin-left: 55px;
+                margin-top: -6px;
+                animation: moveright 1s linear;
+                animation-delay: 2s;
+                visibility: hidden;
+                animation-fill-mode: forwards;
+            }
+
+            section>div>img {
+                border-radius: 200px;
+                position: absolute;
+                right: -511px;
+                top: 551px;
+                animation: zoomin 3s linear 1;
+                animation-delay: 0.1s;
+                visibility: hidden;
+                animation-fill-mode: forwards;
+            }
+        }
 
 </style>
 </head>
