--- a/sub/aboutme.html
+++ b/sub/aboutme.html
@@ -241,41 +241,65 @@
         }
 
 
-         @media all and(min-width: 320px) {
+
+
+
+
+
+
+
+
+
+         @media all and(min-width: 426px){
              header {
                  color: #4e52e9;
-                 margin-left: 40px;
-                 font-size: 28px;
+                 font-size: 30px;
                  font-family: "Righteous", cursive;
-                 margin-left: 354px;
+                 margin-left: 412px;
              }
-
              section>img {
                  position: absolute;
-                 right: -447px;
+                 right: 0px;
                  top: 0px;
-                 margin-top: 85px;
+                 margin-top: 148px;
+                 margin-right: -562px;
              }
              section>ul>li>h3 {
-                 margin-left: 155px;
+                 margin-left: 194px;
                  font-size: 25px;
                  font-family: "Righteous", cursive;
                  list-style: none;
                  color: white;
              }
-             .navigation {
-                 position: absolute;
-                 inset: 20px 0 20px 20px;
-                 width: 105px;
-                 background: #4f5050;
-                 transition: 0.5s;
-                 display: flex;
-                 justify-content: center;
-                 align-items: center;
-             }
+
         }
 
+        @media all and(min-width: 426px) and (max-width: 769px){
+            header {
+                color: #4e52e9;
+                font-size: 30px;
+                font-family: "Righteous", cursive;
+                margin-left: 123px;
+            }
 
+            section>img {
+                position: absolute;
+                right: 0px;
+                top: 0px;
+                margin-top: 85px;
+                margin-right: -464px;
+            }
+
+            h3 {
+                display: block;
+                font-size: 1.17em;
+                margin-block-start: 1em;
+                margin-block-end: 1em;
+                margin-inline-start: 0px;
+                margin-inline-end: 0px;
+                font-weight: bold;
+            }
+        }
 
     </style>
 </head>
