--- a/sub/assignmens.html
+++ b/sub/assignmens.html
@@ -301,6 +301,128 @@
 
 
 
+
+
+    @media all and(min-width: 320px) and (max-width: 375px){
+        h3 {
+            color: white;
+            font-size: 15px;
+            animation: movedown 1s linear;
+            margin-left: -216px;
+            margin-top: 130px;
+        }
+
+        section1>h2 {
+            position: absolute;
+            margin-left: 178px;
+            margin-top: 157px;
+            font-size: 28px;
+        }
+
+        section2>h2 {
+            position: absolute;
+            margin-left: 418px;
+            margin-top: 157px;
+            font-size: 28px;
+        }
+
+        section3>h2 {
+            position: absolute;
+            margin-left: 616px;
+            margin-top: 157px;
+            font-size: 28px;
+        }
+
+        h1 {
+            color: white;
+            position: absolute;
+            margin-left: 392px;
+            font-size: 39px;
+        }
+
+    }
+
+
+    @media all and(min-width: 375px) and (max-width: 425px){
+        h3 {
+            color: white;
+            font-size: 15px;
+            animation: movedown 1s linear;
+            margin-left: -216px;
+            margin-top: 130px;
+        }
+
+        section1>h2 {
+            position: absolute;
+            margin-left: 178px;
+            margin-top: 157px;
+            font-size: 28px;
+        }
+
+        section2>h2 {
+            position: absolute;
+            margin-left: 418px;
+            margin-top: 157px;
+            font-size: 28px;
+        }
+
+        section3>h2 {
+            position: absolute;
+            margin-left: 616px;
+            margin-top: 157px;
+            font-size: 28px;
+        }
+
+        h1 {
+            color: white;
+            position: absolute;
+            margin-left: 392px;
+            font-size: 39px;
+        }
+
+    }
+
+
+    @media all and(min-width: 425px) and (max-width: 768px){
+        h3 {
+            color: white;
+            font-size: 15px;
+            animation: movedown 1s linear;
+            margin-left: -216px;
+            margin-top: 130px;
+        }
+
+        section1>h2 {
+            position: absolute;
+            margin-left: 178px;
+            margin-top: 157px;
+            font-size: 28px;
+        }
+
+        section2>h2 {
+            position: absolute;
+            margin-left: 418px;
+            margin-top: 157px;
+            font-size: 28px;
+        }
+
+        section3>h2 {
+            position: absolute;
+            margin-left: 616px;
+            margin-top: 157px;
+            font-size: 28px;
+        }
+
+        h1 {
+            color: white;
+            position: absolute;
+            margin-left: 392px;
+            font-size: 39px;
+        }
+
+    }
+
+
 </style>
 
 
@@ -366,9 +488,6 @@
         </li>
     </ul>
 </div>
-
-
-
 
 
 <header>
