--- a/sub/projects.html
+++ b/sub/projects.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
     <style>
-        {
+        {.
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -255,22 +255,25 @@
                 color: yellow;
                 font-size: 31px;
                 /* position: absolute; */
-                margin-left: 105px;
+                margin-left: 149px;
             }
             section>div>img {
                 position: absolute;
-                margin-top: -641px;
-                width: 245px;
+                margin-top: 9px;
                 animation: zoomin 1s linear 1;
                 animation-delay: 0.1s;
                 visibility: hidden;
                 animation-fill-mode: forwards;
+                margin-left: 146px;
             }
-            div>ul>li {
+            div>ul>li>a>h2 {
+                /* position: absolute; */
+                font-size: 17px;
+                margin-left: 1000px;
                 color: white;
-                margin-left: -822px;
-                margin-bottom: 1px;
-                margin-top: 6px;
+                top: -10px;
+                font-family: 'Lobster', cursive;
+                animation: movedown 1s linear;
             }
         }
         @media all and (min-width: 426px) and (max-width: 769px){
